test: SonarQube 테스트 경고 정리